fix(user-list): avoid user avatar overflow outside background

--- a/css/app.css
+++ b/css/app.css
@@ -165,6 +165,7 @@ select {
   width: 36px;
   height: 36px;
   border-radius: 18px;
+  overflow: hidden;
   background: var(--placeholder-bg-color);
   display: flex;
   align-items: center;
